objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Job_City_State_PC__c</fullName>
        <formula>Last_Job_ID__r.Venue_City__c + &apos;, &apos;  +  Last_Job_ID__r.Venue_State__c  + &apos;, &apos;  +   Last_Job_ID__r.Venue_Postcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job City State PC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_DropBox_URL_formula__c</fullName>
        <formula>Last_Job_ID__r.DropBox_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job DropBox URL formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Estimated_no_of_participants__c</fullName>
        <formula>Last_Job_ID__r.Estimated_no_of_participants__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Estimated no. of participants</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Evaluation_Survey_PAX_URL__c</fullName>
        <label>Job Evaluation Survey PAX URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Invoice_due_date__c</fullName>
        <formula>Last_Job_ID__r.Invoice_due_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Invoice due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Last_Date__c</fullName>
        <formula>Last_Job_ID__r.Job_Last_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Last Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Learning_Outcome__c</fullName>
        <formula>case(Last_Job_ID__r.Learning_Outcomes__c, 

&quot;http://www.negotiate.org/learning-outcomes/1-day&quot;,
&quot;http://www.negotiate.org/learning-outcomes/1-day&quot;,

&quot;http://www.negotiate.org/learning-outcomes/2-day&quot;,
&quot;http://www.negotiate.org/learning-outcomes/2-day&quot;, 

&quot;http://www.negotiate.org/learning-outcomes/3-day&quot;,
&quot;http://www.negotiate.org/learning-outcomes/3-day&quot;, 

&quot;http://www.negotiate.org/learning-outcomes/4-day&quot;,
&quot;http://www.negotiate.org/learning-outcomes/4-day&quot;,

&quot;http://www.negotiate.org/learning-outcomes/advanced&quot;,
&quot;http://www.negotiate.org/learning-outcomes/advanced&quot;, 


&quot;http://www.negotiate.org/learning-outcomes/fundamentals-program&quot;,
&quot;http://www.negotiate.org/learning-outcomes/fundamentals-program&quot;,

&quot;http://www.negotiate.org/learning-outcomes/professional-negotiation&quot;,
&quot;http://www.negotiate.org/learning-outcomes/professional-negotiation&quot;,

&quot;http://www.negotiate.org/learning-outcomes/strategic-negotiation&quot;,
&quot;http://www.negotiate.org/learning-outcomes/strategic-negotiation&quot;,

&quot;http://www.negotiate.org/learning-outcomes/expert-negotiation&quot;,
&quot;http://www.negotiate.org/learning-outcomes/expert-negotiation&quot;,

&quot;http://www.negotiate.org&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Learning Outcome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_NAM_Name__c</fullName>
        <formula>IF(
ISBLANK(Last_Job_ID__r.NAM_Name__c) = False,
Last_Job_ID__r.NAM_Name__r.Full_Name__c,
Last_Job_ID__r.NAM_Name_Lookup__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job NAM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_NIP_Due_Date__c</fullName>
        <formula>Last_Job_ID__r.NIP_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job NIP Due Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_NIP_Survey_PAX_URL__c</fullName>
        <label>Job NIP Survey PAX URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_NIP_Survey_URL__c</fullName>
        <formula>Last_Job_ID__r.NIP_Survey_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job NIP Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_NIP_Survey_included__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Pardot only.</inlineHelpText>
        <label>Job NIP Survey included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Open_Course_Level__c</fullName>
        <formula>Last_Job_ID__r.Opportunity_and_job_type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Open Course Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_PFQ_Due_Date__c</fullName>
        <formula>Last_Job_ID__r.PFQ_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job PFQ Due Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_PFQ_Survey_PAX_Url__c</fullName>
        <label>Job PFQ Survey PAX URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_PFQ_Survey_URL__c</fullName>
        <formula>Last_Job_ID__r.PFQ_Survey_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job PFQ Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_PFQ_Survey_included__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Pardot only.</inlineHelpText>
        <label>Job PFQ Survey included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_PFQ_and_NIP_included__c</fullName>
        <formula>IF(
AND(
Job_NIP_Survey_included__c = True,
Job_PFQ_Survey_included__c = True
),
&quot;Both&quot;,
IF(
AND(
Job_NIP_Survey_included__c = False,
Job_PFQ_Survey_included__c = True
),
&quot;PFQ Only&quot;,
IF(
AND(
Job_NIP_Survey_included__c = True,
Job_PFQ_Survey_included__c = False
),
&quot;NIP Only&quot;,
&quot;Neither&quot;
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job PFQ and NIP included</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Presenters__c</fullName>
        <formula>IF(
ISBLANK(Last_Job_ID__r.Presenters__c) = False,
Last_Job_ID__r.Presenters__c,
Last_Job_ID__r.Facilitator_names__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Presenters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Presenters_email__c</fullName>
        <formula>IF(
ISBLANK(Last_Job_ID__r.Presenters_email__c) = False,
Last_Job_ID__r.Presenters_email__c,
Last_Job_ID__r.Facilitator_emails__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Presenters email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Public_Program_Name__c</fullName>
        <formula>TEXT(Last_Job_ID__r.Open_course_program_name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Public Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_RAIT_Post_Survey_PAX_URL__c</fullName>
        <label>Job RAIT (Post) Survey PAX URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Retainer_Expiry_Date__c</fullName>
        <formula>Last_Job_ID__r.Retainer_Expiry_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Retainer Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Retainer_Hours_Remaining__c</fullName>
        <formula>Last_Job_ID__r.Retainer_Hours_Remaining__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Retainer Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Start_Finish_Time__c</fullName>
        <formula>Last_Job_ID__r.Start_Finish_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Start Finish Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Survey_3_month_status__c</fullName>
        <label>Job Survey 3 month status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_participant_status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Survey_Evaluation_status__c</fullName>
        <label>Job Survey Evaluation status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_participant_status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Survey_NIP_status__c</fullName>
        <label>Job Survey NIP status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_participant_status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Survey_PFQ_status__c</fullName>
        <label>Job Survey PFQ status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_participant_status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Survey_RAIT_Pre_status__c</fullName>
        <label>Job Survey RAIT (Pre) status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_participant_status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Survey_RAIT_post_status__c</fullName>
        <label>Job Survey RAIT (post) status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_participant_status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Three_Month_Survey_PAX_URL__c</fullName>
        <label>Job Three Month Survey PAX URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Three_Month_Survey_URL__c</fullName>
        <formula>Last_Job_ID__r.Three_Month_Survey_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Three Month Survey URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Total_Retainer_Hours__c</fullName>
        <formula>Last_Job_ID__r.Retainer_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Total Retainer Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Total_job_item_hours__c</fullName>
        <formula>Last_Job_ID__r.Total_Job_Item_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Total job item hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Venue_Address__c</fullName>
        <formula>Last_Job_ID__r.Venue_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Venue Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Venue_City__c</fullName>
        <formula>Last_Job_ID__r.Venue_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Venue City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Venue_Contact__c</fullName>
        <formula>Last_Job_ID__r.Venue_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Venue Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Venue_Country__c</fullName>
        <formula>Last_Job_ID__r.Venue_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Venue Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Venue_Name__c</fullName>
        <formula>Last_Job_ID__r.Venue_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Venue Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_eLearn_included__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Pardot only.</inlineHelpText>
        <label>Job eLearn included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_eLearning_Access_Period__c</fullName>
        <formula>IF(
ISBLANK(Last_Job_ID__r.eLearning_access_period__c) = False,
Last_Job_ID__r.eLearning_access_period__c,
TEXT(Last_Job_ID__r.eLearning_Access_Period_months__c) &amp; &quot; months&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job eLearning Access Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_eLearning_Expiry_Date__c</fullName>
        <formula>Last_Job_ID__r.eLearning_Expiry_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job eLearning Expiry Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_email_custom_paragraph__c</fullName>
        <inlineHelpText>Admin only.</inlineHelpText>
        <label>Job email custom paragraph</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Job_email_custom_paragraph_empty__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Admin only.</inlineHelpText>
        <label>Job email custom paragraph empty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_language_code__c</fullName>
        <formula>Last_Job_ID__r.Language_code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Admin only</inlineHelpText>
        <label>Job language code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_venue_map__c</fullName>
        <formula>case(Last_Job_ID__r.Venue_Map__c, 
&quot;http://www.christieconference.com.au/brisbane_map.html&quot;, 

&quot;http://www.christieconference.com.au/brisbane_map.html&quot;, 

&quot;https://maps.google.com.au/maps?q=st+catherine%27s+college+2+Park+Road+Nedlands+WA+6009&amp;hl=en&amp;oe=utf-8&amp;client=firefox-a&amp;hq=st+catherine%27s+college+2+Park+Road+Nedlands+WA+6009&amp;t=m&amp;z=15&amp;iwloc=A&quot;,

&quot;https://maps.google.com.au/maps?q=st+catherine%27s+college+2+Park+Road+Nedlands+WA+6009&amp;hl=en&amp;oe=utf-8&amp;client=firefox-a&amp;hq=st+catherine%27s+college+2+Park+Road+Nedlands+WA+6009&amp;t=m&amp;z=15&amp;iwloc=A&quot;,

&quot;http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=25+Scotts+Road,+Singapore&amp;sll=37.0625,-95.677068&amp;sspn=55.411532,83.583984&amp;ie=UTF8&amp;hq=&amp;hnear=25+Scotts+Rd,+Singapore+228220&amp;z=17&quot;,

&quot;http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=25+Scotts+Road,+Singapore&amp;sll=37.0625,-95.677068&amp;sspn=55.411532,83.583984&amp;ie=UTF8&amp;hq=&amp;hnear=25+Scotts+Rd,+Singapore+228220&amp;z=17&quot;,


&quot;http://maps.google.com/maps?q=7+Raffles+Boulevard,+singapore+039595&amp;hl=en&amp;ll=1.292629,103.858781&amp;spn=0.013815,0.027487&amp;sll=1.294045,103.858738&amp;sspn=0.128713,0.188656&amp;t=m&amp;hnear=7+Raffles+Blvd,+Singapore+039595&amp;z=16&quot;,

&quot;http://maps.google.com/maps?q=7+Raffles+Boulevard,+singapore+039595&amp;hl=en&amp;ll=1.292629,103.858781&amp;spn=0.013815,0.027487&amp;sll=1.294045,103.858738&amp;sspn=0.128713,0.188656&amp;t=m&amp;hnear=7+Raffles+Blvd,+Singapore+039595&amp;z=16&quot;,

&quot;http://www.karstens.com.au/site/home/locations/&quot;,

&quot;http://www.karstens.com.au/site/home/locations/&quot;,

&quot;http://www.saxons.com.au/contact-us/&quot;,

&quot;http://www.saxons.com.au/contact-us/&quot;,


&quot;https://maps.google.com.au/maps?oe=utf-8&amp;client=firefox-a&amp;ie=UTF-8&amp;q=brindabella+park+map&amp;fb=1&amp;gl=au&amp;hq=brindabella+park&amp;cid=0,0,4431978011727730847&amp;ei=Wt2uUcqxCImuiQeM_oCYAQ&amp;ved=0CJIBEPwSMAE&quot;,

&quot;https://maps.google.com.au/maps?oe=utf-8&amp;client=firefox-a&amp;ie=UTF-8&amp;q=brindabella+park+map&amp;fb=1&amp;gl=au&amp;hq=brindabella+park&amp;cid=0,0,4431978011727730847&amp;ei=Wt2uUcqxCImuiQeM_oCYAQ&amp;ved=0CJIBEPwSMAE&quot;,

&quot;http://goo.gl/maps/K2tqK&quot;,
&quot;http://goo.gl/maps/K2tqK&quot;,

&quot;http://www.trinity.uwa.edu.au/content/conference-centre/location.php&quot;,
&quot;http://www.trinity.uwa.edu.au/content/conference-centre/location.php&quot;,

&quot;http://www.monaco-chicago.com/chicago-loop-hotel/index.html&quot;,
&quot;http://www.monaco-chicago.com/chicago-loop-hotel/index.html&quot;,

&quot;https://www.cliftons.com/venues/brisbane/&quot;,
&quot;https://www.cliftons.com/venues/brisbane/&quot;,

&quot;https://www.cliftons.com/venues/sydney/&quot;,
&quot;https://www.cliftons.com/venues/sydney/&quot;,

&quot;https://www.cliftons.com/venues/melbourne/&quot;,
&quot;https://www.cliftons.com/venues/melbourne/&quot;,

&quot;https://www.cliftons.com/venues/canberra/&quot;,
&quot;https://www.cliftons.com/venues/canberra/&quot;,

&quot;https://www.cliftons.com/venues/auckland/&quot;,
&quot;https://www.cliftons.com/venues/auckland/&quot;,

&quot;https://www.cliftons.com/venues/wellington/&quot;,
&quot;https://www.cliftons.com/venues/wellington/&quot;,


&quot;https://www.cliftons.com/venues/adelaide/&quot;,
&quot;https://www.cliftons.com/venues/adelaide/&quot;,

&quot;http://www.sydneyconference.com.au/location/&quot;,
&quot;http://www.sydneyconference.com.au/location/&quot;,

&quot;https://www.google.com.au/maps/place/PWC+Building/@1.282182,103.848731,18z/data=!4m7!1m4!3m3!1s0x31da190c4b0d2cbf:0x71a244bd7297d91e!2sPWC+Building!3b1!3m1!1s0x31da190c4b0d2cbf:0x71a244bd7297d91e?hl=en&quot;,

&quot;https://www.google.com.au/maps/place/PWC+Building/@1.282182,103.848731,18z/data=!4m7!1m4!3m3!1s0x31da190c4b0d2cbf:0x71a244bd7297d91e!2sPWC+Building!3b1!3m1!1s0x31da190c4b0d2cbf:0x71a244bd7297d91e?hl=en&quot;,

&quot;http://www.versalys.com/montreal.html&quot;,
&quot;http://www.versalys.com/montreal.html&quot;,

&quot;http://www.23es.com/contact-us/london/&quot;,
&quot;http://www.23es.com/contact-us/london/&quot;,

&quot;https://www.cliftons.com/venues/sydney/spring-street/&quot;,
&quot;https://www.cliftons.com/venues/sydney/spring-street/&quot;,

&quot;https://www.cliftons.com/venues/hong-kong/&quot;,
&quot;https://www.cliftons.com/venues/hong-kong/&quot;,


&quot;ERROR&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job venue map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages_Spoken__c</fullName>
        <inlineHelpText>Languages Network is fluent in and can present ENSI work</inlineHelpText>
        <label>Languages Spoken</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Akan</fullName>
                </value>
                <value>
                    <fullName>Amharic</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Assamese</fullName>
                </value>
                <value>
                    <fullName>Awadhi</fullName>
                </value>
                <value>
                    <fullName>Azerbaijani</fullName>
                </value>
                <value>
                    <fullName>Balochi</fullName>
                </value>
                <value>
                    <fullName>Belarusian</fullName>
                </value>
                <value>
                    <fullName>Bengali (Bangla)</fullName>
                </value>
                <value>
                    <fullName>Bhojpuri</fullName>
                </value>
                <value>
                    <fullName>Burmese</fullName>
                </value>
                <value>
                    <fullName>Catalan</fullName>
                </value>
                <value>
                    <fullName>Cebuano (Visayan)</fullName>
                </value>
                <value>
                    <fullName>Chewa</fullName>
                </value>
                <value>
                    <fullName>Chhattisgarhi</fullName>
                </value>
                <value>
                    <fullName>Chittagonian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Deccan</fullName>
                </value>
                <value>
                    <fullName>Dhundhari</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Eastern Min (inc. Fuzhounese)</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Fula</fullName>
                </value>
                <value>
                    <fullName>Gan Chinese</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Gujarati</fullName>
                </value>
                <value>
                    <fullName>Haitian Creole</fullName>
                </value>
                <value>
                    <fullName>Hakka</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <inlineHelpText>Languages Network members speak and can run ENS training</inlineHelpText>
        <label>Languages OLD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Job_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Job ID</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Job_Name__c</fullName>
        <label>Last Job Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Job_Role_Id__c</fullName>
        <label>Last Job Role Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Participant_Id__c</fullName>
        <description>used to save participant id</description>
        <label>Last Participant Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Survey_Id__c</fullName>
        <description>used to save survey Id</description>
        <label>Last Survey Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Action_by_date__c</fullName>
        <inlineHelpText>add the date the action is due</inlineHelpText>
        <label>ENS Lead Action By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Comments__c</fullName>
        <inlineHelpText>comments relating to the Lead</inlineHelpText>
        <label>ENS Lead Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Licence_Expiry__c</fullName>
        <inlineHelpText>Enter the date when the licence expires</inlineHelpText>
        <label>Licence Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Licence_Renewal__c</fullName>
        <inlineHelpText>Enter the date of the date the ENS license was signed</inlineHelpText>
        <label>Licence Signed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licence_Rollover_Date__c</fullName>
        <inlineHelpText>Date a new licence rollover letter sent</inlineHelpText>
        <label>Licence Rollover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Licence_Type__c</fullName>
        <inlineHelpText>Select the type of Licence the Licencee has signed</inlineHelpText>
        <label>Licence Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>22.5% presenter fee</fullName>
                </value>
                <value>
                    <fullName>35% presenter fee</fullName>
                </value>
                <value>
                    <fullName>45%  presenter fee (JB only)</fullName>
                </value>
                <value>
                    <fullName>Associate</fullName>
                </value>
                <value>
                    <fullName>Business to Business</fullName>
                </value>
                <value>
                    <fullName>Business Development Licencee</fullName>
                </value>
                <value>
                    <fullName>Marketer</fullName>
                </value>
                <value>
                    <fullName>Sub Licence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Licensee_Region__c</fullName>
        <inlineHelpText>Enter the region where this licensee or marketer is located.</inlineHelpText>
        <label>Licensee Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australia / NZ</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Licensee_Reporting__c</fullName>
        <inlineHelpText>Should this person be included in monthly reporting on business activity?</inlineHelpText>
        <label>Licensee_Reporting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                    <default>true</default>
                    <label>NO</label>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>List_Source__c</fullName>
        <inlineHelpText>The marketing list that the contact was sourced from.</inlineHelpText>
        <label>List Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_segmentation_updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For list segmentation mass update only</description>
        <label>List segmentation updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locality__c</fullName>
        <label>Locality</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Country__c</fullName>
        <formula>MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Address Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_consulted_for_accounts__c</fullName>
        <label>NAM consulted for accounts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NAM_consulted_on_N_accounts__c</fullName>
        <label>NAM consulted on N accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NAM_responsible_for_accounts__c</fullName>
        <label>NAM responsible for accounts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NAM_responsible_on_N_accounts__c</fullName>
        <label>NAM responsible on N accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_Policy_Holder__c</fullName>
        <label>Name of Policy Holder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Negotium_Email_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the box is ticked they DO receive Negotium. 
(You must have permission from person to send Negotium).</inlineHelpText>
        <label>Negotium Email Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Negotium_Sub_Group__c</fullName>
        <description>Allows division into separate mail-out groups if needed. For example, by random number generation (in Excel).</description>
        <label>Negotium Sub-Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negotium_Subscribe_Date__c</fullName>
        <inlineHelpText>Date subscribed to Negotium</inlineHelpText>
        <label>Negotium Subscribe Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negotium_Unsubscribe_Date__c</fullName>
        <inlineHelpText>Date unsubscribed to Negotium. Add comment why they unsubscribed</inlineHelpText>
        <label>Negotium Unsubscribe Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Member_status__c</fullName>
        <label>Network Member Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Prospective</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Old_Org_ID__c</fullName>
        <label>Old Org ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Org_Name__c</fullName>
        <label>Old Org Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Person_Account_Contact_ID__c</fullName>
        <description>For contacts which were previously Person Accounts</description>
        <label>Old Person Account Contact ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Person_ID__c</fullName>
        <label>Old Person ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Org Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <inlineHelpText>Used to pass information from Arlo and the website</inlineHelpText>
        <label>Organisation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pardot_Rating__c</fullName>
        <formula>IMAGE(
IF(pi__score__c&lt;1, &quot;/img/samples/stars_000.gif&quot;,
IF(pi__score__c&lt;50, &quot;/img/samples/stars_100.gif&quot;,
IF(pi__score__c&lt;100, &quot;/img/samples/stars_200.gif&quot;,
IF(pi__score__c&lt;150, &quot;/img/samples/stars_300.gif&quot;,
IF(pi__score__c&lt;200, &quot;/img/samples/stars_400.gif&quot;, &quot;/img/samples/stars_500.gif&quot;
))))),
&quot;Rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pardot Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <label>Partner Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Type__c</fullName>
        <label>Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Main</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Start_Time__c</fullName>
        <label>Preferred Start Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previously_a_NAM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previously a NAM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Org_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Org Contact</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>